--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "framer-motion": "^11.2.10",
     "hamburger-react": "^2.5.1",
     "i18next": "^23.11.5",
+    "jwt-decode": "^4.0.0",
     "md5": "^2.3.0",
     "moment": "^2.30.1",
     "otp-timer": "^1.1.5",
