Add loan account upload feature and improve data handling
Introduces UploadLoanAccountDetails component for uploading loan account details via Excel, updates routing to use this component, and adds sample file. Refactors data dashboard and deletion components to use bearer token and loading states, improves error handling, and updates API endpoints for loan waiver uploads. Also moves asset files, adds file-saver dependency, and updates type definitions for .xlsx files.

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/file-saver": "^2.0.7",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.96",
     "@types/react": "^18.2.79",
@@ -25,6 +26,7 @@
     "crypto-js": "^4.2.0",
     "date-fns": "^3.6.0",
     "fad-react-bootstrap-table-next": "^4.0.5",
+    "file-saver": "^2.0.5",
     "focus-formik-error": "^1.1.0",
     "formik": "^2.4.5",
     "framer-motion": "^11.2.10",
